--- a/themes/hello-friend-ng/assets/scss/_header.scss
+++ b/themes/hello-friend-ng/assets/scss/_header.scss
@@ -38,7 +38,7 @@
     align-items: center;
     justify-content: space-between;
     margin: 0 auto;
-    width: 760px;
+    width: $content-width;
     max-width: 100%;
   }
 }
