--- a/themes/hello-friend-ng/assets/scss/_single.scss
+++ b/themes/hello-friend-ng/assets/scss/_single.scss
@@ -1,6 +1,6 @@
 .post {
   width: 100%;
-  max-width: 800px;
+  max-width: $article-width;
   text-align: left;
   padding: 20px;
   margin: 20px auto;
