--- a/themes/hello-friend-ng/assets/scss/_variables.scss
+++ b/themes/hello-friend-ng/assets/scss/_variables.scss
@@ -31,3 +31,5 @@ $media-size-tablet: "(max-width: 900px)";
 
 /* Content */
 $max-width: 860px;
+$article-width: 1360px;
+$content-width: 1400px;
